# Spectre-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  SConstruct  Spectre.sln
Spectre/: SConscript  Spectre.vcxproj  Spectre.vcxproj.filters  command.cc  command.h  command_id.h  component.cc  component.h  component_id.h  event.cc  event.h  event_id.cc  event_id.h  game_variables.cc  game_variables.h  logger.cc  logger.h  main.cc  object.cc  object.h  object_manager.cc  object_manager.h  objectmanager.cc  objectmanager.h  observer.cc  observer.h  physics_component.cc  physics_component.h  subject.cc  subject.h  transform_component.cc  transform_component.h  world.cc  world.h  wrentest.cc
Spectre/source/: command.cc  command.h  component.cc  component.h  game_variables.h  input.cc  input.h  internal_types.cc  internal_types.h  logger.cc  logger.h  main.cc  object.cc  object.h  object_manager.cc  object_manager.h  physics_component.cc  physics_component.h  pubsub.cc  pubsub.h  script_component.h  test_pub_sub.cc  test_pub_sub.h  transform_component.cc  transform_component.h  world.cc  world.h  wren_bindings.cc  wren_bindings.h  wren_component.cc  wren_component.h
SpectreGame/: CMakeLists.txt  SpectreGame.vcxproj  SpectreGame.vcxproj.filters  game_main.cc
source/: component.h  logger.h  object_manager.h  world.cc
